--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <title>Spanri | Персонажи</title>
+  <script type="module" crossorigin src="/assets/index.4bfcff88.js"></script>
+  <link rel="stylesheet" href="/assets/index.ec208f66.css">
 </head>
 
 <body>
@@ -218,7 +220,7 @@
 
   <div id="app"></div>
 
-  <script type="module" src="/src/main.ts"></script>
+  
 </body>
 
 </html>
