--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,9 +23,10 @@
         </div>
 
         <div class="header__links">
-          <a class="header__links-item" href="http://vk.com/art_nysha"><img src="/vk.svg"
-              title="Группа автора персонажей" /></a>
-          <a class="header__links-item" href="../index.html"><img src="/earth.svg" title="Сайт автора персонажей" /></a>
+          <a class="header__links-item" href="http://vk.com/art_nysha" target="_blank">
+            <img src="/vk.svg" title="Группа автора персонажей" />
+          </a>
+          <!-- <a class="header__links-item" href="../index.html"><img src="/earth.svg" title="Сайт автора персонажей" /></a> -->
         </div>
       </div>
 
@@ -80,7 +81,7 @@
       </div>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Риото</h2>
+        <h2 class="content__row-description-title">Риото, 22 года</h2>
         <div class="content__row-description-text">
           Я самый продуманный персонаж. Придуман аж в 2014 году!<br />
           Спанри говорит, что я олицетворяю ее со стороны странности, необычности, ребячества, интереса и творчества.
@@ -109,7 +110,7 @@
       </custom-image-slider>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Кенди</h2>
+        <h2 class="content__row-description-title">Кенди, 22 года</h2>
         <div class="content__row-description-text">
           Спанри и еще один автор с multator.ru на общем аккаунте создали меня. После этого аккаунт был
           заброшен, но Спанри было жалко такого замечательного героя и она придумала мне историю. А потом
@@ -136,7 +137,7 @@
       </custom-image-slider>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Тим</h2>
+        <h2 class="content__row-description-title">Тим, 14 лет</h2>
         <div class="content__row-description-text">
           Серьезно, мне нечего сказать о себе! Я обычный подросток, мне 14, люблю физику и учить языки
           программирования. Ты что, даже не знаешь, что это? Пожалуйста, не подходи. Мне нужно личное
@@ -164,7 +165,7 @@
       </custom-image-slider>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Ричард</h2>
+        <h2 class="content__row-description-title">Ричард, 24 года</h2>
         <div class="content__row-description-text">
           Привет, бро. Я Ричард, бультерьер, хотя я не уверен и мне вроде 24 уже. Я крч не вейплю, не курю и не
           кручу спиннеры, но меня все равно считают позером.Нет, ну кто виноват, что у меня такая офигенная
@@ -195,7 +196,7 @@
       </custom-image-slider>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Вадим</h2>
+        <h2 class="content__row-description-title">Вадим, 38 лет</h2>
         <div class="content__row-description-text">
           Я - самый первый персонаж Спанри. Сначала я вообще обладал магией во лбу(потому что там кристалл
           был), имел имя Ввадюша и был активным малым. Но время идет, люди растут, вырос и я, стал Вадимом,
@@ -218,7 +219,7 @@
       </custom-image-slider>
 
       <div class="content__row-description">
-        <h2 class="content__row-description-title">Аэли</h2>
+        <h2 class="content__row-description-title">Аэли, 24 года</h2>
         <div class="content__row-description-text">
           Привеееет. Помню, когда меня Спанри создавала, то так долго продумывала! Я ее первый осознанный
           персонаж и она хотела, чтобы я была идеальной! Но должна же быть изюминка... Может во мне она есть,
@@ -229,7 +230,8 @@
       </div>
     </div>
   </div>
-  <footer> &copy; Spanri, 2022</footer>
+
+  <footer class="footer"> &copy; Spanri, 2022</footer>
 
   <div id="app"></div>
 
