--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,7 +87,7 @@
   </header>
 
   <div class="content">
-    <div class="content__row">
+    <div id="rioto" class="content__row">
       <div class="content__row-image-slider">
         <custom-image-slider
           slots='["/images/Rioto/Rioto.png", "/images/Rioto/Rioto2.jpg", "/images/Rioto/Rioto3.jpg", "/images/Rioto/Rioto4.jpg", "/images/Rioto/Rioto5.png"]'>
@@ -118,7 +118,7 @@
       </p>
     </div>
 
-    <div class="content__row">
+    <div id="candy" class="content__row">
       <custom-image-slider class="content__row-image-slider"
         slots='["/images/Candy/Candy.png", "/images/Candy/Candy2.jpg", "/images/Candy/Candy3.png"]'>
       </custom-image-slider>
@@ -146,7 +146,7 @@
       </p>
     </div>
 
-    <div class="content__row">
+    <div id="tim" class="content__row">
       <custom-image-slider class="content__row-image-slider" slots='["/images/Tim/Tim.png", "/images/Tim/Tim2.jpg"]'>
       </custom-image-slider>
 
@@ -173,7 +173,7 @@
       </p>
     </div>
 
-    <div class="content__row">
+    <div id="richard" class="content__row">
       <custom-image-slider class="content__row-image-slider"
         slots='["/images/Richard/Richard.png", "/images/Richard/Richard2.jpg"]'>
       </custom-image-slider>
@@ -204,7 +204,7 @@
       </p>
     </div>
 
-    <div class="content__row">
+    <div id="vadim" class="content__row">
       <custom-image-slider class="content__row-image-slider"
         slots='["/images/Vadim/Vadim.png", "/images/Vadim/Vadim2.jpg"]'>
       </custom-image-slider>
@@ -228,7 +228,7 @@
       </p>
     </div>
 
-    <div class="content__row">
+    <div id="aeli" class="content__row">
       <custom-image-slider class="content__row-image-slider" slots='["/images/Aeli/Aeli.png"]'>
       </custom-image-slider>
 
