--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/my_characters/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Spanri | Персонажи</title>
-  <script type="module" crossorigin src="/assets/index.e04893f7.js"></script>
-  <link rel="stylesheet" href="/assets/index.686b5d9c.css">
+  <script type="module" crossorigin src="/my_characters/assets/index.cedae85c.js"></script>
+  <link rel="stylesheet" href="/my_characters/assets/index.686b5d9c.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
         <div class="header__links">
           <a class="header__links-item" href="http://vk.com/art_nysha" target="_blank">
-            <img src="/vk.svg" title="Группа автора персонажей" />
+            <img src="/my_characters/vk.svg" title="Группа автора персонажей" />
           </a>
           <!-- <a class="header__links-item" href="../index.html"><img src="/earth.svg" title="Сайт автора персонажей" /></a> -->
         </div>
@@ -38,38 +38,38 @@
         <custom-tooltip class="header__item header__item_rioto">
           <span slot="value">Риото, 22 года</span>
           <a slot="target" href="#rioto">
-            <img class="header__item-layer-img" src="/images/layer1-1.svg" />
-            <img class="header__item-img" src="/images/Rioto/Rioto.png" title="Риото, 22 года" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer1-1.svg" />
+            <img class="header__item-img" src="/my_characters/images/Rioto/Rioto.png" title="Риото, 22 года" />
           </a>
         </custom-tooltip>
         <custom-tooltip class="header__item header__item_aeli">
           <span slot="value">Аэли, 24 года</span>
           <a slot="target" href="#aeli">
-            <img class="header__item-layer-img" src="/images/layer1-2.svg" />
-            <img class="header__item-img" src="/images/Aeli/Aeli.png" title="Аэли, 24 года" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer1-2.svg" />
+            <img class="header__item-img" src="/my_characters/images/Aeli/Aeli.png" title="Аэли, 24 года" />
           </a>
         </custom-tooltip>
         <custom-tooltip class="header__item header__item_aeli">
           <span slot="value">Вадим, 38 лет</span>
           <a slot="target" href="#vadim">
-            <img class="header__item-layer-img" src="/images/layer1-3.svg" />
-            <img class="header__item-img" src="/images/Vadim/Vadim.png" title="Вадим, 38 лет" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer1-3.svg" />
+            <img class="header__item-img" src="/my_characters/images/Vadim/Vadim.png" title="Вадим, 38 лет" />
           </a>
         </custom-tooltip>
         <div class="header__break header__size_small"></div>
         <custom-tooltip class="header__item header__item_tim">
           <span slot="value">Тим, 14 лет</span>
           <a slot="target" href="#tim">
-            <img class="header__item-layer-img" src="/images/layer1-4.svg" />
-            <img class="header__item-img" src="/images/Tim/Tim.png" title="Тим, 14 лет" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer1-4.svg" />
+            <img class="header__item-img" src="/my_characters/images/Tim/Tim.png" title="Тим, 14 лет" />
           </a>
         </custom-tooltip>
         <div class="header__break header__size_large"></div>
         <custom-tooltip class="header__item header__item_candy">
           <span slot="value">Кенди, 22 года</span>
           <a slot="target" href="#candy">
-            <img class="header__item-layer-img" src="/images/layer2-1.svg" />
-            <img class="header__item-img" src="/images/Candy/Candy.png" title="Кенди, 22 года" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer2-1.svg" />
+            <img class="header__item-img" src="/my_characters/images/Candy/Candy.png" title="Кенди, 22 года" />
           </a>
         </custom-tooltip>
         <div class="header__description header__size_large">
@@ -80,8 +80,8 @@
         <custom-tooltip class="header__item header__item_tim">
           <span slot="value">Ричард, 24 года</span>
           <a slot="target" href="#richard">
-            <img class="header__item-layer-img" src="/images/layer2-2.svg" />
-            <img class="header__item-img" src="/images/Richard/Richard.png" title="Ричард, 24 года" />
+            <img class="header__item-layer-img" src="/my_characters/images/layer2-2.svg" />
+            <img class="header__item-img" src="/my_characters/images/Richard/Richard.png" title="Ричард, 24 года" />
           </a>
         </custom-tooltip>
       </div>
