--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,7 @@
     <div id="rioto" class="content__row">
       <div class="content__row-image-slider">
         <custom-image-slider
-          slots='["/images/Rioto/Rioto.png", "/images/Rioto/Rioto2.jpg", "/images/Rioto/Rioto3.jpg", "/images/Rioto/Rioto4.jpg", "/images/Rioto/Rioto5.png"]'>
+          slots='["./images/Rioto/Rioto.png", "./images/Rioto/Rioto2.jpg", "./images/Rioto/Rioto3.jpg", "./images/Rioto/Rioto4.jpg", "./images/Rioto/Rioto5.png"]'>
         </custom-image-slider>
       </div>
 
@@ -120,7 +120,7 @@
 
     <div id="candy" class="content__row">
       <custom-image-slider class="content__row-image-slider"
-        slots='["/images/Candy/Candy.png", "/images/Candy/Candy2.jpg", "/images/Candy/Candy3.png"]'>
+        slots='["./images/Candy/Candy.png", "./images/Candy/Candy2.jpg", "./images/Candy/Candy3.png"]'>
       </custom-image-slider>
 
       <div class="content__row-description">
@@ -147,7 +147,7 @@
     </div>
 
     <div id="tim" class="content__row">
-      <custom-image-slider class="content__row-image-slider" slots='["/images/Tim/Tim.png", "/images/Tim/Tim2.jpg"]'>
+      <custom-image-slider class="content__row-image-slider" slots='["./images/Tim/Tim.png", "./images/Tim/Tim2.jpg"]'>
       </custom-image-slider>
 
       <div class="content__row-description">
@@ -175,7 +175,7 @@
 
     <div id="richard" class="content__row">
       <custom-image-slider class="content__row-image-slider"
-        slots='["/images/Richard/Richard.png", "/images/Richard/Richard2.jpg"]'>
+        slots='["./images/Richard/Richard.png", "./images/Richard/Richard2.jpg"]'>
       </custom-image-slider>
 
       <div class="content__row-description">
@@ -206,7 +206,7 @@
 
     <div id="vadim" class="content__row">
       <custom-image-slider class="content__row-image-slider"
-        slots='["/images/Vadim/Vadim.png", "/images/Vadim/Vadim2.jpg"]'>
+        slots='["./images/Vadim/Vadim.png", "./images/Vadim/Vadim2.jpg"]'>
       </custom-image-slider>
 
       <div class="content__row-description">
@@ -229,7 +229,7 @@
     </div>
 
     <div id="aeli" class="content__row">
-      <custom-image-slider class="content__row-image-slider" slots='["/images/Aeli/Aeli.png"]'>
+      <custom-image-slider class="content__row-image-slider" slots='["./images/Aeli/Aeli.png"]'>
       </custom-image-slider>
 
       <div class="content__row-description">
